--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -121,6 +121,7 @@
   "3PgHCT": "(UTC+02:00) Chisinau",
   "3QXY3z": "Replacing an existing schema with an incompatible schema might create errors in your map.",
   "3TD2V5": "(UTC+06:00) Dhaka",
+  "3X4FHS": "Choose the type of user input",
   "3Y8a6G": "Required parameters {parameters} not set or invalid",
   "3afjx+": "(UTC+09:00) Chita",
   "3cZZKj": "Divider",
@@ -188,6 +189,7 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
+  "7Vyxu0": "Yes/No",
   "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
@@ -306,6 +308,7 @@
   "DkF25I": "Expand Static Result",
   "DsPDVB": "Trigger condition cannot be empty",
   "DuXV2M": "(UTC-01:00) Azores",
+  "DuoHXI": "Add an input",
   "DyYcJZ": "Run After",
   "DysO/Q": "Ctrl + Y",
   "E+HsWF": "Signing in...",
@@ -646,6 +649,7 @@
   "Vaacox": "Run History",
   "VbMYd8": "Triggers tell your app when to start running. Each workflow needs at least one trigger.",
   "Vfce7b": "Error Type",
+  "VggzRB": "Text",
   "VlvlX1": "Certificate",
   "VptXzY": "Use \"{value}\" as a custom value",
   "W070M2": "of {max}",
@@ -839,6 +843,7 @@
   "_3PgHCT.comment": "Timezone value ",
   "_3QXY3z.comment": "Message bar warning about replacing existing schema",
   "_3TD2V5.comment": "Timezone value ",
+  "_3X4FHS.comment": "Button to choose data type of the dynamically added parameter",
   "_3Y8a6G.comment": "Error message to show when required parameters are not set or invalid",
   "_3afjx+.comment": "Timezone value ",
   "_3cZZKj.comment": "Aria label for divider",
@@ -906,6 +911,7 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
+  "_7Vyxu0.comment": "Dynamically added parameter type Boolean",
   "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
@@ -1024,6 +1030,7 @@
   "_DkF25I.comment": "An accessible label for expand toggle icon",
   "_DsPDVB.comment": "error message for empty trigger condition",
   "_DuXV2M.comment": "Timezone value ",
+  "_DuoHXI.comment": "Button to add a dynamically added parameter",
   "_DyYcJZ.comment": "title for run after setting section",
   "_DysO/Q.comment": "Button text for the control-Y button combination to redo the last undone action",
   "_E+HsWF.comment": "Text for sign in button while loading.",
@@ -1364,6 +1371,7 @@
   "_Vaacox.comment": "Pivot item header text for run history",
   "_VbMYd8.comment": "Description of what Triggers are, on a tooltip about Triggers",
   "_Vfce7b.comment": "The title of the error type field in the static result parseJson action",
+  "_VggzRB.comment": "Dynamically added parameter type Text",
   "_VlvlX1.comment": "Authentication OAuth Certificate Type Label",
   "_VptXzY.comment": "Label for button to allow user to create custom value in combobox from current input",
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
@@ -1435,6 +1443,7 @@
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
   "_Zr0yTE.comment": "Error message",
+  "_a+6uyE.comment": "Dynamically added parameter type File",
   "_a7j3gS.comment": "Required number parameter to divide in mod function",
   "_a7x6VI.comment": "Timezone value ",
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
@@ -1474,6 +1483,7 @@
   "_c4GQZE.comment": "Schema dropdown aria label",
   "_c6XbVI.comment": "label for panel component",
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
+  "_cF4w+R.comment": "Dynamically added parameter type Date",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
   "_cP4UkW.comment": "error message for invalid retry interval",
@@ -1651,6 +1661,7 @@
   "_ljAOR6.comment": "Label for description of custom body Function",
   "_loxzZD.comment": "Label for button to open expression token picker",
   "_lsKVU6.comment": "Select an action type placeholder",
+  "_lv9QyZ.comment": "Dynamically added parameter type Email",
   "_lzBHHT.comment": "Error message for unknown property",
   "_lztiwS.comment": "Parameter Field Actual Value Title",
   "_m/jJ/5.comment": "Map checker",
@@ -1883,6 +1894,7 @@
   "_xYyPR8.comment": "Label for description of custom uriPath Function",
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
+  "_xeREzb.comment": "Dynamically added parameter type Number",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
   "_xwD1VZ.comment": "Loading inputs text",
   "_xwEX2/.comment": "Header text for key-value pair values",
@@ -1917,6 +1929,7 @@
   "_zjDJwP.comment": "This is an option in a dropdown where users can select type Float for their parameter.",
   "_znGyyU.comment": "Label for description of custom addToTime Function",
   "_zxe9hh.comment": "Required integer parameter to subtract minutes from time",
+  "a+6uyE": "File",
   "a7j3gS": "Required. The number to divide by the Divisor.",
   "a7x6VI": "(UTC+08:00) Taipei",
   "aAXnqw": "Required. The number of the occurrence of the substring to find.",
@@ -1956,6 +1969,7 @@
   "c4GQZE": "Select the schema for dropdown",
   "c6XbVI": "panel",
   "c8UPLp": "Dynamic content may also be added from other sources.",
+  "cF4w+R": "Date",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
   "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
@@ -2133,6 +2147,7 @@
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
   "loxzZD": "Insert Expression (You can also add by typing / in the editor)",
   "lsKVU6": "Select an action type",
+  "lv9QyZ": "Email",
   "lzBHHT": "Array Element {index} has unknown property {property}",
   "lztiwS": "Actual Value",
   "m/jJ/5": "Map checker",
@@ -2365,6 +2380,7 @@
   "xYyPR8": "Returns the path from a URI. If path is not specified, returns '/'",
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
+  "xeREzb": "Number",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
   "xwD1VZ": "Loading inputs",
   "xwEX2/": "Value",
