LAFeat: Added Support for HTTPWebhook Tokens (#1974)
http webhook token

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -339,6 +339,7 @@
   "FNbA9+": "Expand",
   "FS+/Tb": "Returns the body for a part in a multipart output of the trigger",
   "FS06y3": "Must provide name of parameter.",
+  "FT3jt6": "Webhook reference information",
   "FUhNu4": "Split On",
   "FUuFlC": "Default",
   "FVavKy": "Returns the start of the day to a string timestamp passed in",
@@ -568,7 +569,6 @@
   "S8P4N5": "Delete",
   "SADSSs": "(UTC+12:00) Petropavlovsk-Kamchatsky - Old",
   "SCCE6s": "Password",
-  "SGxmEY": "Enter a Dictionary",
   "SJFVxf": "issues",
   "SKXopi": "Convert the parameter to an integer",
   "SLJkRn": "Remove input",
@@ -1058,6 +1058,7 @@
   "_FNbA9+.comment": "Expand, making the node bigger, showing the contents",
   "_FS+/Tb.comment": "Label for description of custom triggerMultipartBody Function",
   "_FS06y3.comment": "Error message when the workflow parameter name is empty.",
+  "_FT3jt6.comment": "httpwebhook callback url section title",
   "_FUhNu4.comment": "title for split on setting",
   "_FUuFlC.comment": "Default, the backup option if none other apply",
   "_FVavKy.comment": "Label for description of custom startOfDay Function",
@@ -1287,7 +1288,6 @@
   "_S8P4N5.comment": "type and label to delete a value",
   "_SADSSs.comment": "Timezone value ",
   "_SCCE6s.comment": "Basic Password Label Display Name",
-  "_SGxmEY.comment": "Placeholder for empty collapsed dictionary",
   "_SJFVxf.comment": "Issues, plural",
   "_SKXopi.comment": "Label for description of custom int Function",
   "_SLJkRn.comment": "Remove input",
@@ -1458,6 +1458,7 @@
   "_bGtEPd.comment": "delete button",
   "_bIyTi7.comment": "Subscription dropdown label",
   "_bS5DyV.comment": "Timezone value ",
+  "_bSZ0lL.comment": "Callback url token title",
   "_bTrk+S.comment": "Required object parameter to compare to in lessOrEqual function",
   "_bWBMhe.comment": "description of concurrency setting",
   "_bXFGpe.comment": "Info section title",
@@ -1709,6 +1710,7 @@
   "_oVVPst.comment": "Discard warning message",
   "_odQ554.comment": "Response body for test map API",
   "_ol+TkT.comment": "Timezone value ",
+  "_ox2Ou7.comment": "Placeholder for empty collapsed dictionary",
   "_oxH1L/.comment": "Timezone value ",
   "_p/0r2N.comment": "Required string parameter to be used as key for formDataValue function",
   "_p16/4S.comment": "Label text for request or response headers",
@@ -1942,6 +1944,7 @@
   "bGtEPd": "Delete",
   "bIyTi7": "Subscription",
   "bS5DyV": "(UTC+02:00) Kaliningrad",
+  "bSZ0lL": "Callback url",
   "bTrk+S": "Required. The object to check if it is greater than or equal to value being compared to.",
   "bWBMhe": "By default, Logic App instances run at the same time, or in parallel. This control changes how new runs are queued and can't be changed after enabling. To run as many parallel instances as possible, leave this control turned off. To limit the number of parallel runs, turn on this control, and select a limit. To run sequentially, select 1 as the limit.",
   "bXFGpe": "Info",
@@ -2193,6 +2196,7 @@
   "oVVPst": "Do you want to discard all unsaved changes?",
   "odQ554": "Response body",
   "ol+TkT": "(UTC-03:00) Salvador",
+  "ox2Ou7": "Enter a valid JSON",
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
   "p/0r2N": "Required. The key name of the form data value to return.",
   "p16/4S": "Headers",
