add narrator description

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -253,6 +253,7 @@
   "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
   "AcdX+2": "Insert data from previous step (You can also add by typing / in the editor)",
+  "Aci186": "{label} Add dynamic data pressing Alt + /",
   "AgrMqq": "Type of '{0}' is '{1}'.",
   "AheXMN": "Select frequency.",
   "Amz9+m": "Enter audience",
@@ -973,6 +974,7 @@
   "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
   "_AcdX+2.comment": "Label for button to open dynamic content token picker",
+  "_Aci186.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_AgrMqq.comment": "Error message when having invalid authentication property types",
   "_AheXMN.comment": "Placeholder for Frequency",
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
