fix(designer): added keyboard navigation to code editor (#1976)
* http webhook token

* code editor accessibility

* add narrator description

* remove enum

---------

Co-authored-by: Travis Harris <hartra344@users.noreply.github.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -168,6 +168,7 @@
   "5rkegy": "Delete Parameter",
   "5ytHcK": "Loading...",
   "6+RwRp": "Hybrid Connector",
+  "61iT9C": "Insert data from previous step (You can also add by typing Alt + / in the editor)",
   "62Ypnr": "Error loading operation data",
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "65FlWi": "(UTC+08:45) Eucla",
@@ -254,6 +255,7 @@
   "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
   "AcdX+2": "Insert data from previous step (You can also add by typing / in the editor)",
+  "Aci186": "{label} Add dynamic data pressing Alt + /",
   "AgrMqq": "Type of '{0}' is '{1}'.",
   "AheXMN": "Select frequency.",
   "Amz9+m": "Enter audience",
@@ -893,6 +895,7 @@
   "_5rkegy.comment": "Delete Button Tooltip Text",
   "_5ytHcK.comment": "Loading text for spinner",
   "_6+RwRp.comment": "Resource group title",
+  "_61iT9C.comment": "Label for button to open dynamic content token picker",
   "_62Ypnr.comment": "label for panel error",
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_65FlWi.comment": "Timezone value ",
@@ -979,6 +982,7 @@
   "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
   "_AcdX+2.comment": "Label for button to open dynamic content token picker",
+  "_Aci186.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_AgrMqq.comment": "Error message when having invalid authentication property types",
   "_AheXMN.comment": "Placeholder for Frequency",
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
