feat(designer): Setup work for filepicker, Other Bug fixes (#2020)
* temp

* work

* commented out code

* fixed styling of static results

* temp commit

* temp commit

* temp commit

* temp

* temp

* merge

* bugfixes / initial filepicker work

* removed console log

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1785,6 +1785,7 @@
   "_rsdJcV.comment": "Main message displayed in the placeholder",
   "_rstpaK.comment": "Timezone value ",
   "_rv0Pn+.comment": "Add new option",
+  "_s+4LEa.comment": "Open folder label",
   "_s5RV9B.comment": "Label for description of custom dayOfMonth Function",
   "_s7nGyC.comment": "Delete Button",
   "_sDkAVZ.comment": "Label for description of custom triggerFormDataMultiValues Function",
@@ -2275,6 +2276,7 @@
   "rsdJcV": "Select source schema elements to build your map",
   "rstpaK": "(UTC-06:00) Central Time (US & Canada)",
   "rv0Pn+": "Add new",
+  "s+4LEa": "Open folder",
   "s5RV9B": "Returns the day of year component of a string timestamp",
   "s7nGyC": "Delete",
   "sDkAVZ": "Returns an array of values matching the key name from form-data or form-encoded trigger output",
