fix(designer): Updated and enabled multiple built-in triggers for Consumption (#2028)
* Updated and enabled multiple built-in triggers for consumption

* PR Self-review fixes

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -103,6 +103,7 @@
   "2gzGrJ": "Required. The name of the action with a form-data or form-encoded response.",
   "2kWLLc": "Start Time",
   "2pRsUf": "Enter a valid array.",
+  "2r30S9": "Insert a new step after {parentName}",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
   "2vnYre": "Add Action",
@@ -225,7 +226,6 @@
   "8yjjTX": "Connect via Service Principal",
   "9/UeTh": "Returns a single array or object that has common elements between arrays or objects passed in",
   "9/vdrb": "(UTC+07:00) Hovd",
-  "90HY0L": "Insert a new step between {parent} and {child}",
   "90Q7Pw": "Value",
   "92OUl9": "Array Element {index} is missing required property {property}",
   "93Gj/n": "Line Position",
@@ -293,6 +293,7 @@
   "ClZW2r": "Value",
   "CsPY74": "Credential Type",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
+  "CypYLs": "Insert a new step between {parentName} and {childName}",
   "Czt6YV": "at {times}",
   "D+Ptnq": "Returns the path and query from a URI",
   "D/xTXV": "Show source schema",
@@ -828,6 +829,7 @@
   "_2gzGrJ.comment": "Required string parameter to identify action name for formDataValue function",
   "_2kWLLc.comment": "Label for Start time",
   "_2pRsUf.comment": "Error validation message for the array type",
+  "_2r30S9.comment": "Tooltip for the button to add a new step (action or branch)",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
   "_2vnYre.comment": "Add action button text",
@@ -950,7 +952,6 @@
   "_8yjjTX.comment": "Checkbox label for using an Service Pricipal connection",
   "_9/UeTh.comment": "Label for description of custom intersection Function",
   "_9/vdrb.comment": "Timezone value ",
-  "_90HY0L.comment": "Tooltip for the button to add a new step (action or branch)",
   "_90Q7Pw.comment": "Raw Value Label Display Name",
   "_92OUl9.comment": "Error message for missing required property",
   "_93Gj/n.comment": "The title of the line position field in the static result parseJson action",
@@ -1018,6 +1019,7 @@
   "_ClZW2r.comment": "Parameter Field Value Title",
   "_CsPY74.comment": "Authentication OAuth Type Label",
   "_Cy9qeQ.comment": "Timezone value ",
+  "_CypYLs.comment": "Tooltip for the button to add a new step (action or branch)",
   "_Czt6YV.comment": "Recurrence schedule description at times",
   "_D+Ptnq.comment": "Label for description of custom uriPathAndQuery Function",
   "_D/xTXV.comment": "Label to open source schema toolbox",
@@ -1829,7 +1831,6 @@
   "_u6Gdft.comment": "Timezone value ",
   "_u9tr3k.comment": "Label for default message when no node selected",
   "_uDI1Um.comment": "The title of the status code field in the static result http action",
-  "_uIQrat.comment": "Tooltip for the button to add a new step (action or branch)",
   "_uIurld.comment": "Label for save button",
   "_uM1i27.comment": "placeholder for retry count setting",
   "_uN4zFU.comment": "OK message appearing on a alert message modal.",
@@ -2320,7 +2321,6 @@
   "u6Gdft": "(UTC+04:00) Abu Dhabi, Muscat",
   "u9tr3k": "Select an element to start configuring",
   "uDI1Um": "Status Code",
-  "uIQrat": "Insert a new step after {parent}",
   "uIurld": "Save",
   "uM1i27": "Specify a retry count from 1 to 90",
   "uN4zFU": "OK",
