fix(designer): add UI for invoker connection support (#2044)
* Fixing the subsequent listDynamicValues calls by adding correct cache key

* lafix: add ui support for invoker connection

* reverting changes from previous commit

---------

Co-authored-by: Travis Harris <hartra344@users.noreply.github.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -331,6 +331,7 @@
   "EiRMD4": "Sign in to create a connection to {connectorDisplayName}.",
   "EjXdAm": "Password",
   "Eqgm4v": "(UTC-05:00) Eastern Time (US & Canada)",
+  "Ex4U46": "Use Invoker's Connection",
   "ExaACE": "Connection display name",
   "F3IDl8": "Required. The number of a specified time unit to add.",
   "F489Vg": "(UTC+08:00) Irkutsk",
@@ -424,6 +425,7 @@
   "Jil/Wa": "Invalid settings",
   "JjTfC7": "Required. The number to be formatted.",
   "JnlcZQ": "Name:",
+  "Jpox7O": "When enabled, this action will run with the user from the \"Run as\" setting in the Dataverse trigger.",
   "JpthWY": "(UTC-03:00) Montevideo",
   "Jq2Y/o": "Required. The numeric format string.",
   "JzqgNM": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
@@ -1057,6 +1059,7 @@
   "_EiRMD4.comment": "Description for creating an externally authenticated connection.",
   "_EjXdAm.comment": "OAuth Password Label Display Name",
   "_Eqgm4v.comment": "Timezone value ",
+  "_Ex4U46.comment": "title for invoker connection",
   "_ExaACE.comment": "aria label description for connection display name",
   "_F3IDl8.comment": "Required integer parameter to add to time",
   "_F489Vg.comment": "Timezone value ",
@@ -1150,6 +1153,7 @@
   "_Jil/Wa.comment": "Text to explain that there are invalid settings for this node",
   "_JjTfC7.comment": "Required value parameter to apply formatNumber function on",
   "_JnlcZQ.comment": "Label text for workflow name",
+  "_Jpox7O.comment": "description of invoker connection setting",
   "_JpthWY.comment": "Timezone value ",
   "_Jq2Y/o.comment": "Required format parameter to apply formatNumber function with",
   "_JzqgNM.comment": "description for client tracking id setting",
