Fix styling and dont throw when valueSegment is empty

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -666,6 +666,7 @@
   "VptXzY": "Use \"{value}\" as a custom value",
   "W070M2": "of {max}",
   "W6FdMh": "Required. The name of the new property.",
+  "W7sa4b": "Enter title",
   "WGwH45": "Clear",
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
@@ -1400,6 +1401,7 @@
   "_VptXzY.comment": "Label for button to allow user to create custom value in combobox from current input",
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
+  "_W7sa4b.comment": "Placeholder for variable name for new dynamically added parameter",
   "_WGwH45.comment": "Label to clear editor",
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
@@ -1548,7 +1550,6 @@
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgfpz.comment": "Swagger url input error message",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
-  "_eRXKqu.comment": "Placeholder for variable name for new dynamically added parameter",
   "_eRvRWs.comment": "Label text for request start time",
   "_eT+b9W.comment": "Required number parameter to be divided by in div function",
   "_egLI8P.comment": "Required start index parameter required to obtain substring",
@@ -2041,7 +2042,6 @@
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgfpz": "Please enter a valid URL",
   "eHgi14": "Required. The name of the variable whose value you want.",
-  "eRXKqu": "Enter variable name",
   "eRvRWs": "Start time",
   "eT+b9W": "Required. The number to divide the Dividend by.",
   "egLI8P": "Required. The index of where the substring begins in parameter 1.",
