feat(powerautomate): Implement DynamicallyAddedParameter to support manual trigger (#2068)
* WIP

* WIP, initial deserialize works

* Save Flow works

* cleanup and add delete implementation

* Fix styling and dont throw when valueSegment is empty

---------

Co-authored-by: Ram Gupta <Ram.Gupta@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -173,6 +173,7 @@
   "62Ypnr": "Error loading operation data",
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "65FlWi": "(UTC+08:45) Eucla",
+  "6H3oG1": "Please enter or select a date (YYYY-MM-DD)",
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
@@ -191,7 +192,6 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
-  "7Vyxu0": "Yes/No",
   "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
@@ -227,6 +227,7 @@
   "9/UeTh": "Returns a single array or object that has common elements between arrays or objects passed in",
   "9/vdrb": "(UTC+07:00) Hovd",
   "90Q7Pw": "Value",
+  "90o7sB": "File",
   "92OUl9": "Array Element {index} is missing required property {property}",
   "93Gj/n": "Line Position",
   "93svjx": "User identity is not supported when Logic App has system assigned managed identity enabled.",
@@ -238,6 +239,7 @@
   "9Jv3+1": "Returns an object with an additional property value pair",
   "9SuA/E": "12",
   "9YGcT2": "ChildErrors",
+  "9YZ873": "Text",
   "9atGYe": "Add",
   "9djnqI": "Returns the result from adding the two numbers",
   "9pdXmX": "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna",
@@ -302,6 +304,7 @@
   "DDIIAQ": "Node",
   "DGMwU4": "Use sample payload to generate schema",
   "DJW8RE": "Select a value",
+  "DOf1/I": "Please enter your input",
   "DWd9vy": "every week",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
@@ -335,6 +338,7 @@
   "ExaACE": "Connection display name",
   "F3IDl8": "Required. The number of a specified time unit to add.",
   "F489Vg": "(UTC+08:00) Irkutsk",
+  "F51kU8": "Please enter a number",
   "F9dR1Q": "Add",
   "FBNevf": "Go To Operation",
   "FDF4Qb": "Returns a parameter value that is defined in the definition",
@@ -410,6 +414,7 @@
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
   "IsVhkH": "No properties",
+  "Iwi+x0": "Please select yes or no",
   "J/Kz1j": "Asynchronous Pattern",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
@@ -494,6 +499,7 @@
   "NnD8gF": "Invalid operation path input value. Path value - {pathValue} Path template - {pathTemplate}",
   "No6CS+": "Enter tenant",
   "NoXs0l": "Please select an identity",
+  "Nro0qr": "Please enter an e-mail address",
   "NvANon": "(UTC-09:00) Alaska",
   "NvJDn/": "Tuesday",
   "O+8vRv": "Returns a binary representation of a value",
@@ -513,6 +519,7 @@
   "OOUTdW": "Loading all connectors...",
   "OSHNZ2": "Comment",
   "OVvieE": "Returns the results from the top-level actions in the specified scoped action, such as a For_each, Until, or Scope action.",
+  "OcnU0i": "Please select file or image",
   "OdNhwc": "Ungroup",
   "OdoUEu": "Enable Static Result",
   "Oib1mL": "{hours}h {minutes}m",
@@ -655,11 +662,11 @@
   "Vaacox": "Run History",
   "VbMYd8": "Triggers tell your app when to start running. Each workflow needs at least one trigger.",
   "Vfce7b": "Error Type",
-  "VggzRB": "Text",
   "VlvlX1": "Certificate",
   "VptXzY": "Use \"{value}\" as a custom value",
   "W070M2": "of {max}",
   "W6FdMh": "Required. The name of the new property.",
+  "W7sa4b": "Enter title",
   "WGwH45": "Clear",
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
@@ -901,6 +908,7 @@
   "_62Ypnr.comment": "label for panel error",
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_65FlWi.comment": "Timezone value ",
+  "_6H3oG1.comment": "Placeholder text shown for a newly inserted Date parameter",
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
@@ -919,7 +927,6 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
-  "_7Vyxu0.comment": "Dynamically added parameter type Boolean",
   "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
@@ -955,6 +962,7 @@
   "_9/UeTh.comment": "Label for description of custom intersection Function",
   "_9/vdrb.comment": "Timezone value ",
   "_90Q7Pw.comment": "Raw Value Label Display Name",
+  "_90o7sB.comment": "Label for File type dynamically added parameter",
   "_92OUl9.comment": "Error message for missing required property",
   "_93Gj/n.comment": "The title of the line position field in the static result parseJson action",
   "_93svjx.comment": "error message for unspported identity",
@@ -966,6 +974,7 @@
   "_9Jv3+1.comment": "Label for description of custom addProperty Function",
   "_9SuA/E.comment": "Hour of the day",
   "_9YGcT2.comment": "The title of the child errors field in the static result parseJson action",
+  "_9YZ873.comment": "Label for Text type dynamically added parameter",
   "_9atGYe.comment": "Insert Expression",
   "_9djnqI.comment": "Label for description of custom add Function",
   "_9pdXmX.comment": "Timezone value ",
@@ -1030,6 +1039,7 @@
   "_DDIIAQ.comment": "Title for other node",
   "_DGMwU4.comment": "Button Label for allowing users to generate from schema",
   "_DJW8RE.comment": "Placeholder for dropdown",
+  "_DOf1/I.comment": "Placeholder text shown for a newly inserted Text parameter",
   "_DWd9vy.comment": "Recurrence schedule description every week",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
@@ -1063,6 +1073,7 @@
   "_ExaACE.comment": "aria label description for connection display name",
   "_F3IDl8.comment": "Required integer parameter to add to time",
   "_F489Vg.comment": "Timezone value ",
+  "_F51kU8.comment": "Placeholder text shown for a newly inserted Number parameter",
   "_F9dR1Q.comment": "Add",
   "_FBNevf.comment": "Header for a search panel that searches for and allows direct navigation to a specific node",
   "_FDF4Qb.comment": "Label for description of custom parameters Function",
@@ -1138,6 +1149,7 @@
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
   "_IsVhkH.comment": "No properties text",
+  "_Iwi+x0.comment": "Placeholder text shown for a newly inserted Boolean parameter",
   "_J/Kz1j.comment": "title for async pattern setting",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
@@ -1222,6 +1234,7 @@
   "_NnD8gF.comment": "Error message while parsing ",
   "_No6CS+.comment": "Tenant Placeholder Text",
   "_NoXs0l.comment": "MSI Identity Placeholder Text",
+  "_Nro0qr.comment": "Placeholder text shown for a newly inserted Email parameter",
   "_NvANon.comment": "Timezone value ",
   "_NvJDn/.comment": "Day of the week",
   "_O+8vRv.comment": "Label for description of custom binary Function",
@@ -1241,6 +1254,7 @@
   "_OOUTdW.comment": "Message to show under the loading icon when loading connectors",
   "_OSHNZ2.comment": "Label for the comment textfield",
   "_OVvieE.comment": "Label for description of custom result Function",
+  "_OcnU0i.comment": "Placeholder text shown for a newly inserted File parameter",
   "_OdNhwc.comment": "Ungroup button",
   "_OdoUEu.comment": "Label for toggle to enable static result",
   "_Oib1mL.comment": "This is a time duration in abbreviated format",
@@ -1383,11 +1397,11 @@
   "_Vaacox.comment": "Pivot item header text for run history",
   "_VbMYd8.comment": "Description of what Triggers are, on a tooltip about Triggers",
   "_Vfce7b.comment": "The title of the error type field in the static result parseJson action",
-  "_VggzRB.comment": "Dynamically added parameter type Text",
   "_VlvlX1.comment": "Authentication OAuth Certificate Type Label",
   "_VptXzY.comment": "Label for button to allow user to create custom value in combobox from current input",
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
+  "_W7sa4b.comment": "Placeholder for variable name for new dynamically added parameter",
   "_WGwH45.comment": "Label to clear editor",
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
@@ -1455,7 +1469,6 @@
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
   "_Zr0yTE.comment": "Error message",
-  "_a+6uyE.comment": "Dynamically added parameter type File",
   "_a7j3gS.comment": "Required number parameter to divide in mod function",
   "_a7x6VI.comment": "Timezone value ",
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
@@ -1484,6 +1497,7 @@
   "_ba9yGJ.comment": "Button text for loading more runs",
   "_bf7078.comment": "Label for description of custom max Function",
   "_bnStSJ.comment": "Timezone value ",
+  "_bv9QPA.comment": "Label for Date type dynamically added parameter",
   "_bwfJdj.comment": "Text to show which node the target node is run after",
   "_bx3qeC.comment": "Timezone value ",
   "_bxhkTi.comment": "Test tab parameters description",
@@ -1496,7 +1510,6 @@
   "_c4GQZE.comment": "Schema dropdown aria label",
   "_c6XbVI.comment": "label for panel component",
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
-  "_cF4w+R.comment": "Dynamically added parameter type Date",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
   "_cP4UkW.comment": "error message for invalid retry interval",
@@ -1577,10 +1590,13 @@
   "_gRUmiA.comment": "Info about token picker",
   "_gTXyUo.comment": "Label for timezone",
   "_gWRF8m.comment": "title for trigger conditions setting",
+  "_gfBWfH.comment": "Label for Email type dynamically added parameter",
   "_gg0j4S.comment": "Timezone value ",
+  "_gkY5ya.comment": "Delete dynamic parameter corresponding to this row",
   "_gpbgjJ.comment": "Error message for when split on value not found in operation outputs.",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_gvDMuq.comment": "Select a Batch Workflow resource",
+  "_h+W3VW.comment": "Label for Number type dynamically added parameter",
   "_h1lQDa.comment": "Modal Title text",
   "_h40rpg.comment": "description of retry interval setting",
   "_h6vVbX.comment": "Message to add a source schema",
@@ -1675,7 +1691,6 @@
   "_ljAOR6.comment": "Label for description of custom body Function",
   "_loxzZD.comment": "Label for button to open expression token picker",
   "_lsKVU6.comment": "Select an action type placeholder",
-  "_lv9QyZ.comment": "Dynamically added parameter type Email",
   "_lzBHHT.comment": "Error message for unknown property",
   "_lztiwS.comment": "Parameter Field Actual Value Title",
   "_m/jJ/5.comment": "Map checker",
@@ -1706,6 +1721,7 @@
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
   "_nOWGAV.comment": "End time text",
+  "_nOhve4.comment": "Label for Bool type dynamically added parameter",
   "_nRpM02.comment": "Custom category name text",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
@@ -1888,6 +1904,7 @@
   "_wQsEwc.comment": "Required length parameter to obtain substring",
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
+  "_wXJALc.comment": "Open dynamically added parameter options menu",
   "_wkiETV.comment": "Client Tracking ID text",
   "_wkvUUA.comment": "Title for the input type mismatch card",
   "_wl7X0l.comment": "Label to hide the mini-map",
@@ -1910,7 +1927,6 @@
   "_xYyPR8.comment": "Label for description of custom uriPath Function",
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
-  "_xeREzb.comment": "Dynamically added parameter type Number",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
   "_xwD1VZ.comment": "Loading inputs text",
   "_xwEX2/.comment": "Header text for key-value pair values",
@@ -1945,7 +1961,6 @@
   "_zjDJwP.comment": "This is an option in a dropdown where users can select type Float for their parameter.",
   "_znGyyU.comment": "Label for description of custom addToTime Function",
   "_zxe9hh.comment": "Required integer parameter to subtract minutes from time",
-  "a+6uyE": "File",
   "a7j3gS": "Required. The number to divide by the Divisor.",
   "a7x6VI": "(UTC+08:00) Taipei",
   "aAXnqw": "Required. The number of the occurrence of the substring to find.",
@@ -1974,6 +1989,7 @@
   "ba9yGJ": "Load more",
   "bf7078": "Returns the maximum value in the input array of numbers",
   "bnStSJ": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
+  "bv9QPA": "Date",
   "bwfJdj": "Run after {sourceNodeId}",
   "bx3qeC": "(UTC-03:00) Brasilia",
   "bxhkTi": "Provide parameters to test the output.",
@@ -1986,7 +2002,6 @@
   "c4GQZE": "Select the schema for dropdown",
   "c6XbVI": "panel",
   "c8UPLp": "Dynamic content may also be added from other sources.",
-  "cF4w+R": "Date",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
   "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
@@ -2067,10 +2082,13 @@
   "gRUmiA": "Info",
   "gTXyUo": "Time Zone",
   "gWRF8m": "Trigger Conditions",
+  "gfBWfH": "Email",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
+  "gkY5ya": "Delete",
   "gpbgjJ": "Invalid split on value '{splitOn}', cannot find in outputs.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "gvDMuq": "Select a Batch Workflow resource",
+  "h+W3VW": "Number",
   "h1lQDa": "Enter or paste a sample JSON payload.",
   "h40rpg": "Specify interval in ISO 8601 format.",
   "h6vVbX": "Add a source schema first, then select elements to build your map",
@@ -2165,7 +2183,6 @@
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
   "loxzZD": "Insert Expression (You can also add by typing / in the editor)",
   "lsKVU6": "Select an action type",
-  "lv9QyZ": "Email",
   "lzBHHT": "Array Element {index} has unknown property {property}",
   "lztiwS": "Actual Value",
   "m/jJ/5": "Map checker",
@@ -2196,6 +2213,7 @@
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
   "nOWGAV": "End time",
+  "nOhve4": "Yes/No",
   "nRpM02": "Custom",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
@@ -2378,6 +2396,7 @@
   "wQsEwc": "Required. The length of the substring.",
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
+  "wXJALc": "Menu",
   "wkiETV": "Client Tracking ID",
   "wkvUUA": "Input type mismatch",
   "wl7X0l": "Hide mini-map",
@@ -2400,7 +2419,6 @@
   "xYyPR8": "Returns the path from a URI. If path is not specified, returns '/'",
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
-  "xeREzb": "Number",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
   "xwD1VZ": "Loading inputs",
   "xwEX2/": "Value",
